--- a/apps/Offline.html
+++ b/apps/Offline.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, App, Navigation, Directions, Maps, GPS">
 	<meta name="author" content="Vicente Garcia">
 	<link href="../style.css" rel="stylesheet">
-	<link rel="canonical" href="https://vicegax.com">
+	<link rel="canonical" href="https://vicegax.com/apps/Offline">
 	<link rel="icon" type="image/png" href="/favicon.png">
 	<meta property="og:site_name" content="vicegax">
 </head>
@@ -19,7 +19,7 @@
 </div>
 <div id="centred_content">
 	<div id="heading">
-		<img id="app_icon" src="../images/App-Offline.png" width="128px" height="128px" alt="Offline app icon" />
+		<img id="app_icon" src="../images/App-Offline.png" width="128" height="128" alt="Offline app icon" />
 		<h1 style="margin: 0;">
 			Offline
 		</h1>
