--- a/apps/Un.html
+++ b/apps/Un.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="iOS, macOS, Mac, Apple, App, Safari, Extension, LinkedIn, Filter, Web">
 	<meta name="author" content="Vicente Garcia">
 	<link href="../style.css" rel="stylesheet">
-	<link rel="canonical" href="https://vicegax.com">
+	<link rel="canonical" href="https://vicegax.com/apps/Un">
 	<link rel="icon" type="image/png" href="/favicon.png">
 	<meta property="og:site_name" content="vicegax">
 </head>
@@ -19,7 +19,7 @@
 </div>
 <div id="centred_content">
 	<div id="heading">
-		<img id="app_icon" src="../images/App-Un.png" width="128px" height="128px" alt="Un app icon" />
+		<img id="app_icon" src="../images/App-Un.png" width="128" height="128" alt="Un app icon" />
 		<h1 style="margin: 0;">
 			Un
 		</h1>
