--- a/apps/Wikimind.html
+++ b/apps/Wikimind.html
@@ -9,7 +9,7 @@
 	<meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, App, Wikipedia, Mind, Map, Rabbit, Hole, Diagram, Learn, Education, Knowledge">
 	<meta name="author" content="Vicente Garcia">
 	<link href="../style.css" rel="stylesheet">
-	<link rel="canonical" href="https://vicegax.com">
+	<link rel="canonical" href="https://vicegax.com/apps/Wikimind">
 	<link rel="icon" type="image/png" href="/favicon.png">
 	<meta property="og:site_name" content="vicegax">
 </head>
@@ -19,7 +19,7 @@
 </div>
 <div id="centred_content">
 	<div id="heading">
-		<img id="app_icon" src="../images/App-Wikimind.png" width="128px" height="128px" alt="Wikimind app icon" />
+		<img id="app_icon" src="../images/App-Wikimind.png" width="128" height="128" alt="Wikimind app icon" />
 		<h1 style="margin: 0;">
 			Wikimind
 		</h1>
