--- a/apps/Cookie.html
+++ b/apps/Cookie.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8"/>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'/>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'>
 	<title>Cookie - Web browser</title>
 	<meta name="description" content="Cookie is a web browser app for iOS and macOS.">
 	<meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, App, Cookie, Web, Browser">
@@ -19,7 +19,7 @@
 </div>
 <div id="centred_content">
 	<div id="heading">
-		<img id="app_icon" src="../images/App-Cookie.png" width="128" height="128" alt="Cookie app icon" />
+		<img id="app_icon" src="../images/App-Cookie.png" width="128" height="128" alt="Cookie app icon" >
 		<h1 style="margin: 0;">
 			Cookie
 		</h1>
@@ -82,7 +82,7 @@
 	</h4>
 	<p>
 		<a href="https://apps.apple.com/gb/app/cookie/id6447298717?platform=iphone">
-			<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" />
+			<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" >
 		</a>
 	</p>
 	
@@ -91,7 +91,7 @@
 	</h4>
 	<p>
 		<a href="https://apps.apple.com/gb/app/cookie/id6447298717?platform=mac">
-			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" />
+			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" >
 		</a>
 	</p>
 	<p>&nbsp;</p>
@@ -106,10 +106,10 @@
 	
 </div>
 <div id="footer">
-	<hr />
+	<hr >
 	<p>
 		Vicente Garcia 2022-2024
-		<br />
+		<br >
 		All rights reserved and stuff.
 	</p>
 </div>
