--- a/apps/Offline.html
+++ b/apps/Offline.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8"/>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'/>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'>
 	<title>Offline - Maps and Navigation without Internet</title>
 	<meta name="description" content="Offline is an app for iOS, watchOS and macOS.">
 	<meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, App, Navigation, Directions, Maps, GPS">
@@ -19,7 +19,7 @@
 </div>
 <div id="centred_content">
 	<div id="heading">
-		<img id="app_icon" src="../images/App-Offline.png" width="128" height="128" alt="Offline app icon" />
+		<img id="app_icon" src="../images/App-Offline.png" width="128" height="128" alt="Offline app icon" >
 		<h1 style="margin: 0;">
 			Offline
 		</h1>
@@ -103,7 +103,7 @@
 	</h4>
 	<p>
 		<a href="https://apps.apple.com/gb/app/Images/id6504237531?platform=iphone">
-			<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" />
+			<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" >
 		</a>
 	</p>
 	<!-- 
@@ -112,7 +112,7 @@
 	</h4>
 	<p>
 		<a href="https://apps.apple.com/gb/app/Images/id6499503497?platform=mac">
-			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" />
+			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" >
 		</a>
 	</p> -->
 	
@@ -136,10 +136,10 @@
 	
 </div>
 <div id="footer">
-	<hr />
+	<hr >
 	<p>
 		Vicente Garcia 2022-2024
-		<br />
+		<br >
 		All rights reserved and stuff.
 	</p>
 </div>
