--- a/apps/Web.html
+++ b/apps/Web.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8"/>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'/>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'>
 	<title>Web - Private Browser</title>
 	<meta name="description" content="Web is a iOS and macOS Web Browser.">
 	<meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, App, Web, Browser, Private, Search, Secure">
@@ -19,7 +19,7 @@
 </div>
 <div id="centred_content">
 	<div id="heading">
-		<img id="app_icon" src="../images/App-Web.png" width="128" height="128" alt="Web app icon" />
+		<img id="app_icon" src="../images/App-Web.png" width="128" height="128" alt="Web app icon" >
 		<h1 style="margin: 0;">
 			Web
 		</h1>
@@ -73,7 +73,7 @@
 	</h4>
 	<p>
 		<a href="https://apps.apple.com/gb/app/Web/id6474901213?platform=iphone">
-			<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" />
+			<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" >
 		</a>
 	</p>
 	<h4>
@@ -81,7 +81,7 @@
 	</h4>
 	<p>
 		<a href="https://apps.apple.com/gb/app/Web/id6474901213?platform=mac">
-			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" />
+			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" >
 		</a>
 	</p>
 	
@@ -105,10 +105,10 @@
 	
 </div>
 <div id="footer">
-	<hr />
+	<hr >
 	<p>
 		Vicente Garcia 2022-2024
-		<br />
+		<br >
 		All rights reserved and stuff.
 	</p>
 </div>
