--- a/apps/Wikimind.html
+++ b/apps/Wikimind.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8"/>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'/>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'>
 	<title>Wikimind - Wikipedia mind map</title>
 	<meta name="description" content="Learn something new every day.">
 	<meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, App, Wikipedia, Mind, Map, Rabbit, Hole, Diagram, Learn, Education, Knowledge">
@@ -19,7 +19,7 @@
 </div>
 <div id="centred_content">
 	<div id="heading">
-		<img id="app_icon" src="../images/App-Wikimind.png" width="128" height="128" alt="Wikimind app icon" />
+		<img id="app_icon" src="../images/App-Wikimind.png" width="128" height="128" alt="Wikimind app icon" >
 		<h1 style="margin: 0;">
 			Wikimind
 		</h1>
@@ -62,7 +62,7 @@
 	</h4>
 	<p>
 		<a href="https://apps.apple.com/gb/app/Wikimind/id6472438319?platform=iphone">
-			<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" />
+			<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" >
 		</a>
 	</p>
 	
@@ -71,7 +71,7 @@
 	</h4>
 	<p>
 		<a href="https://apps.apple.com/gb/app/Wikimind/id6472438319?platform=mac">
-			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" />
+			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" >
 		</a>
 	</p>
 	<p>&nbsp;</p>
@@ -94,10 +94,10 @@
 	
 </div>
 <div id="footer">
-	<hr />
+	<hr >
 	<p>
 		Vicente Garcia 2022-2024
-		<br />
+		<br >
 		All rights reserved and stuff.
 	</p>
 </div>
