--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'/>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'>
     <title>Vicente Garcia - App Engineer</title>
     <meta name="description" content="Vicente Garcia is an App Engineer for Apple platforms.">
     <meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, Swift, Engineer, Developer, Software, App, Indie, vicegax, Vicente, Garcia">
@@ -16,7 +16,7 @@
 <body>
 <div id="centred_content">
     <div id="heading">
-        <img src="images/Profile-Vicente_Garcia.png" width="190" height="190" alt="Profile picture for Vicente Garcia" />
+        <img src="images/Profile-Vicente_Garcia.png" width="190" height="190" alt="Profile picture for Vicente Garcia" >
         <h1 style="margin: 5px 0 0 0;">
             Vicente Garcia
         </h1>
@@ -52,39 +52,39 @@
     <div id="apps">
         
     <a href="apps/Cookie.html" class="app">
-        <img id="app_icon" src="images/App-Cookie.png" alt="Cookie app icon" />
-        <br />
-        <span id="app_name">Cookie</span>
+        <img class="app_icon" src="images/App-Cookie.png" alt="Cookie app icon" >
+        <br >
+        <span class="app_name">Cookie</span>
     </a>
     <a href="apps/Un.html" class="app">
-        <img id="app_icon" src="images/App-Un.png" alt="Un app icon" />
-        <br />
-        <span id="app_name">Un</span>
+        <img class="app_icon" src="images/App-Un.png" alt="Un app icon" >
+        <br >
+        <span class="app_name">Un</span>
     </a>
     <a href="apps/Infinite-loop.html" class="app">
-        <img id="app_icon" src="images/App-Infinite_loop.png" alt="Infinite loop app icon" />
-        <br />
-        <span id="app_name">Infinite Loop</span>
+        <img class="app_icon" src="images/App-Infinite_loop.png" alt="Infinite loop app icon" >
+        <br >
+        <span class="app_name">Infinite Loop</span>
     </a>
     <a href="apps/Wikimind.html" class="app">
-        <img id="app_icon" src="images/App-Wikimind.png" alt="Wikimind app icon" />
-        <br />
-        <span id="app_name">Wikimind</span>
+        <img class="app_icon" src="images/App-Wikimind.png" alt="Wikimind app icon" >
+        <br >
+        <span class="app_name">Wikimind</span>
     </a>
     <a href="apps/Web.html" class="app">
-        <img id="app_icon" src="images/App-Web.png" alt="Web app icon" />
-        <br />
-        <span id="app_name">Web</span>
+        <img class="app_icon" src="images/App-Web.png" alt="Web app icon" >
+        <br >
+        <span class="app_name">Web</span>
     </a>
     <a href="apps/Images.html" class="app">
-        <img id="app_icon" src="images/App-Images.png" alt="Images app icon" />
-        <br />
-        <span id="app_name">Images</span>
+        <img class="app_icon" src="images/App-Images.png" alt="Images app icon" >
+        <br >
+        <span class="app_name">Images</span>
     </a>
     <a href="apps/Offline.html" class="app">
-        <img id="app_icon" src="images/App-Offline.png" alt="Offline Maps app icon" />
-        <br />
-        <span id="app_name">Offline</span>
+        <img class="app_icon" src="images/App-Offline.png" alt="Offline Maps app icon" >
+        <br >
+        <span class="app_name">Offline</span>
     </a>
     
     </div>
@@ -127,10 +127,10 @@
     <p>&nbsp;</p>
 </div>
 <div id="footer">
-    <hr />
+    <hr >
     <p>
         Vicente Garcia 2022-2024
-        <br />
+        <br >
         All rights reserved and stuff.
     </p>
 </div>
