--- a/apps/Infinite-loop.html
+++ b/apps/Infinite-loop.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8"/>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'/>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'>
 	<title>Infinite Loop: SVG to Swift</title>
 	<meta name="description" content="Infinite Loop converts SVG images to Swift Code.">
 	<meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, App, Swift, Code, SVG, Image, Vector">
@@ -19,7 +19,7 @@
 </div>
 <div id="centred_content">
 	<div id="heading">
-		<img id="app_icon" src="../images/App-Infinite_loop.png" width="128" height="128" alt="Infinite Loop app icon" />
+		<img id="app_icon" src="../images/App-Infinite_loop.png" width="128" height="128" alt="Infinite Loop app icon" >
 		<h1 style="margin: 0;">
 			Infinite Loop
 		</h1>
@@ -76,7 +76,7 @@
 	</h4>
 	<p>
 		<a href="https://apps.apple.com/gb/app/infinite-loop/id6451142898?platform=iphone">
-			<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" />
+			<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" >
 		</a>
 	</p>
 	<h4>
@@ -84,7 +84,7 @@
 	</h4>
 	<p>
 		<a href="https://apps.apple.com/gb/app/infinite-loop/id6451142898?platform=mac">
-			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" />
+			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" >
 		</a>
 	</p>
 	
@@ -100,10 +100,10 @@
 	
 </div>
 <div id="footer">
-	<hr />
+	<hr >
 	<p>
 		Vicente Garcia 2022-2024
-		<br />
+		<br >
 		All rights reserved and stuff.
 	</p>
 </div>
