--- a/apps/Un.html
+++ b/apps/Un.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8"/>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'/>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'>
 	<title>Un - LinkedIn Safari Web Extension</title>
 	<meta name="description" content="Job search filter & web tools for iOS, watchOS and macOS.">
 	<meta name="keywords" content="iOS, macOS, Mac, Apple, App, Safari, Extension, LinkedIn, Filter, Web">
@@ -19,7 +19,7 @@
 </div>
 <div id="centred_content">
 	<div id="heading">
-		<img id="app_icon" src="../images/App-Un.png" width="128" height="128" alt="Un app icon" />
+		<img id="app_icon" src="../images/App-Un.png" width="128" height="128" alt="Un app icon" >
 		<h1 style="margin: 0;">
 			Un
 		</h1>
@@ -95,7 +95,7 @@
 	</h4>
 	<p>
 		<a href="https://apps.apple.com/gb/app/un/id6447438167?platform=iphone">
-			<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" />
+			<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" >
 		</a>
 	</p>
 	<h4>
@@ -103,7 +103,7 @@
 	</h4>
 	<p>
 		<a href="https://apps.apple.com/gb/app/un/id6447438167?platform=mac">
-			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" />
+			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" >
 		</a>
 	</p>
 	<p>&nbsp;</p>
@@ -118,10 +118,10 @@
 	
 </div>
 <div id="footer">
-	<hr />
+	<hr >
 	<p>
 		Vicente Garcia 2022-2024
-		<br />
+		<br >
 		All rights reserved and stuff.
 	</p>
 </div>
