--- a/apps/Videos.html
+++ b/apps/Videos.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8"/>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'/>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'>
 	<title>Videos - Download videos websites</title>
 	<meta name="description" content="Web is a Safari and Web extension for iOS, watchOS and macOS.">
 	<meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, App, Web, Safari, Extension, Videos">
@@ -19,7 +19,7 @@
 </div>
 <div id="centred_content">
 	<div id="heading">
-		<img id="app_icon" src="../images/App-Videos.png" width="128" height="128" alt="Videos app icon" />
+		<img id="app_icon" src="../images/App-Videos.png" width="128" height="128" alt="Videos app icon" >
 		<h1 style="margin: 0;">
 			Videos
 		</h1>
@@ -57,7 +57,7 @@
 	</h4>
 	<p>
 		<a href="https://apps.apple.com/gb/app/Videos/id6550915301?platform=iphone">
-			<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" />
+			<img src="../images/Download_on_the_App_Store_Badge_US.svg" alt="Download for iOS" >
 		</a>
 	</p>
 	<h4>
@@ -65,7 +65,7 @@
 	</h4>
 	<p>
 		<a href="https://apps.apple.com/gb/app/Videos/id6550915301?platform=mac">
-			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" />
+			<img src="../images/Download_on_the_Mac_App_Store_Badge.svg" alt="Download for macOS" >
 		</a>
 	</p>
 	
@@ -89,10 +89,10 @@
 	
 </div>
 <div id="footer">
-	<hr />
+	<hr >
 	<p>
 		Vicente Garcia 2022-2024
-		<br />
+		<br >
 		All rights reserved and stuff.
 	</p>
 </div>
