--- a/apps/Wikimind.html
+++ b/apps/Wikimind.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'>
-	<title>Wikimind - Wikipedia mind map</title>
+	<title>Wikimind - Wikipedia on an app</title>
 	<meta name="description" content="Learn something new every day.">
-	<meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, App, Wikipedia, Mind, Map, Rabbit, Hole, Diagram, Learn, Education, Knowledge">
+	<meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, App, Wikipedia, Humanity, Collective, Mind, Education, Knowledge, Information, Knowledge, Learn">
 	<meta name="author" content="Vicente Garcia">
 	<link href="../style.css" rel="stylesheet">
 	<link rel="canonical" href="https://vicegax.com/apps/Wikimind">
@@ -24,7 +24,7 @@
 			Wikimind
 		</h1>
 		<h2 style="margin-top: 5px;">
-			Wikipedia mind map
+			Wikipedia on an app
 		</h2>
 	</div>
 	
@@ -32,22 +32,16 @@
 		Description
 	</h3>
 	<p>
-		Learn something new every day.
+		Access all of humanity collective mind on <span class="tag">Wikipedia</span>.
 	</p>
 	<p>
-		Wikimind is an visualisation tool for <span class="tag">Wikipedia</span>.
+		<span class="tag">Search</span> for any article in Wikipedia, and stand against <span class="tag">disinformation</span>, access <span class="tag">unbiased</span> information <span class="tag">contributed</span> by folks all over the world and <span class="tag">curated</span> every day.
 	</p>
 	<p>
-		You can generate knowledge mind maps with <b>articles</b> and <b>concepts</b> that are of your interest.
+		Wikipedia is the place where you can <span class="tag">learn</span> something new every day, taking advantage of the crowdsourced <span class="tag">knowledge</span> that has already been gathered on the platform, it is after all, one of the best companion tools for <span class="tag">education</span>.
 	</p>
 	<p>
-		Easily jump from reading a subject to the next one, and all others related to it; follow your own <span class="tag">Rabbit Hole</span> and backtrack your trail to keep exploring different paths. Just like a neural network of information.
-	</p>
-	<p>
-		Some articles contain points of interest and locations, and you can easily visualise them on a map, all this without leaving the app.
-	</p>
-	<p>
-		Learn something new every day and make Wikimind your favourite educational app.
+		Now you have access to all that and more with Wikimind.
 	</p>
 	<p>&nbsp;</p>
 	
@@ -55,7 +49,7 @@
 		Download
 	</h3>
 	<p>
-		You can get Wikimind directly on the <span class="tag">App Store</span>.
+		You can get Wikimind directly on the <span class="tag">App Store</span>, it is a free download with optional In-App Purchases.
 	</p>
 	<h4>
 		iOS
