--- a/apps/Wikimind.html
+++ b/apps/Wikimind.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'>
-	<title>Wikimind - Wikipedia on an app</title>
+	<title>Wikimind - Wikipedia collective mind</title>
 	<meta name="description" content="Learn something new every day.">
 	<meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, App, Wikipedia, Humanity, Collective, Mind, Education, Knowledge, Information, Knowledge, Learn">
 	<meta name="author" content="Vicente Garcia">
@@ -24,7 +24,7 @@
 			Wikimind
 		</h1>
 		<h2 style="margin-top: 5px;">
-			Wikipedia on an app
+			Wikipedia collective mind
 		</h2>
 	</div>
 	
@@ -32,16 +32,16 @@
 		Description
 	</h3>
 	<p>
-		Access all of humanity collective mind on <span class="tag">Wikipedia</span>.
+		Access all of humanity collective mind on <span class="tag">Wikipedia</span>, directly on an app.
 	</p>
 	<p>
-		<span class="tag">Search</span> for any article in Wikipedia, and stand against <span class="tag">disinformation</span>, access <span class="tag">unbiased</span> information <span class="tag">contributed</span> by folks all over the world and <span class="tag">curated</span> every day.
+		<span class="tag">Search</span> for any article in Wikipedia, and stand against <span class="tag">disinformation</span>, challenge political <span class="tag">cynicism</span>, seek and access <span class="tag">unbiased</span> and fundamental truths <span class="tag">contributed</span> by folks all over the world and <span class="tag">curated</span> every day, pertinent and <span class="tag">timeless</span> at once.
 	</p>
 	<p>
 		Wikipedia is the place where you can <span class="tag">learn</span> something new every day, taking advantage of the crowdsourced <span class="tag">knowledge</span> that has already been gathered on the platform, it is after all, one of the best companion tools for <span class="tag">education</span>.
 	</p>
 	<p>
-		Now you have access to all that and more with Wikimind.
+		Now you have access to all that and more with Wikimind, double down on your search for knowledge and truth.
 	</p>
 	<p>&nbsp;</p>
 	
