--- a/apps/Wikimind.html
+++ b/apps/Wikimind.html
@@ -35,7 +35,7 @@
 		Access all of humanity collective mind on <span class="tag">Wikipedia</span>, directly on an app.
 	</p>
 	<p>
-		<span class="tag">Search</span> for any article in Wikipedia, and stand against <span class="tag">disinformation</span>, challenge political <span class="tag">cynicism</span>, seek and access <span class="tag">unbiased</span> and fundamental truths <span class="tag">contributed</span> by folks all over the world and <span class="tag">curated</span> every day, pertinent and <span class="tag">timeless</span> at once.
+		<span class="tag">Search</span> for any article in Wikipedia, and stand against <span class="tag">disinformation</span>, challenge political <span class="tag">cynicism</span>, seek <span class="tag">unbiased</span> and fundamental truths <span class="tag">contributed</span> by folks all over the world and <span class="tag">curated</span> every day, pertinent and <span class="tag">timeless</span> at once.
 	</p>
 	<p>
 		Wikipedia is the place where you can <span class="tag">learn</span> something new every day, taking advantage of the crowdsourced <span class="tag">knowledge</span> that has already been gathered on the platform, it is after all, one of the best companion tools for <span class="tag">education</span>.
