--- a/apps/Web.html
+++ b/apps/Web.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'>
-	<title>Web - Private Browser</title>
-	<meta name="description" content="Web is a iOS and macOS Web Browser.">
-	<meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, App, Web, Browser, Private, Search, Secure">
+	<title>Web - Privacy Intelligence System</title>
+	<meta name="description" content="Web is an iOS and macOS Web Browser.">
+	<meta name="keywords" content="iOS, macOS, iPhone, Mac, Apple, App, Web, Browser, Private, Search, Secure, Intelligence, System">
 	<meta name="author" content="Vicente Garcia">
 	<link href="../style.css" rel="stylesheet">
 	<link rel="canonical" href="https://vicegax.com/apps/Web">
@@ -24,41 +24,44 @@
 			Web
 		</h1>
 		<h2 style="margin-top: 5px;">
-			Private Browser
+			Privacy Intelligence System
 		</h2>
 	</div>
 	
 	<p>
-		Make <span class="tag">Web</span> your <span class="tag">Default Browser</span> app.
-	</p>
-	
-	<p>
-		It is all about <span class="tag">privacy</span>. This app <b>EMPOWERS</b> <b>YOU</b> to have <b>PRIVACY</b> while <b>BROWSING</b>.
+		A Web Browser with an <b>Intelligence System</b> specifically designed for <b>Privacy</b> and <b>Security</b>.
 	</p>
 	
 	<h3>
 		Description
 	</h3>
+	
 	<p>
-		The <span class="tag">fastest</span> <b>searching</b> and <b>browsing</b> for iPhone, Mac, and iPad.
+		<span class="tag">Web</span> was created to give you an alternative way of <b>browsing</b> and exploring the <b>internet</b>; all other web browsers out there compromise in privacy and security in order to function on most websites, even browser apps that claim to be privacy oriented or to offer incognito browsing, by allowing websites to inject <b>Cookies</b>, have the door open for third-parties to track and finger-print you.
 	</p>
+	
 	<p>
-		<span class="tag">Never</span> see <b>ads</b> again, with a Zero-Tolerance Ad Blocker; this is not like any other ad-blocker out there, it really blocks all ads, no partnerships.
+		This app is designed to work the other way around, Web rejects <b>all</b> Cookies by default, <b>preventing</b> any website from tracking you, finger-print your activity, or to share or store your personal information with others.
 	</p>
+	
 	<p>
-		<span class="tag">Block</span> <b>trackers</b> and keep your browsing <b>secure</b>. Don't let websites sell your <span class="tag">personal data</span>.
+		Together with an State of the Art Intelligence System for <b>Anti Tracker Protection</b>, Web is the most secure Browser available.
 	</p>
+	
 	<p>
-		<span class="tag">Stats</span> of trackers <b>blocked</b> and websites with malicious requests.
+		Because <b>Trackers</b> are blocked, and <b>Cookies</b> are prevented, Web is also the fastest Browser App available for iPhone, iPad (iOS) and Mac (macOS); have you ever wondered why some websites take forever to load? is all those unwanted third-party trackers consuming and monopolising up your bandwidth and data.
 	</p>
+	
 	<p>
-		<span class="tag">Keep</span> <b>private</b> whatever it is that you are doing, websites and companies should be allowed to have eyes on your online activity.
+		Of course, this doesn't come easy, by preventing any tracking and disallowing any of your personal information from being stored in websites, Web is not compatible with some social networks, and it is also no recommended for online-purchases, as websites that require you to create accounts, or to make online payments, rely entirely on Cookies to function properly. For those specific cases we recommend that you revert back to your preferred <i>standard</i> web browser (Safari for example); for all other cases, Web is your best bet.
 	</p>
+	
 	<p>
-		<span class="tag">Reader enhancer</span> to adjust text as big as you want making your <b>reading online</b> easier and more comfortable.
+		Among the multiple features, we recommend that you try out <b>Web Intelligence</b>, and <b>Cookie Centre</b>. The former one gives you information and intelligence on your internet activity, including Trackers prevented, Cookies blocked, and Pop-ups stopped, the latter provides you a control centre to decide what Cookies to allow from websites that you trust.
 	</p>
+	
 	<p>
-		<span class="tag">Designed</span> specifically for iPhone, Mac and iPad, all 3 of them different. Unlike all other browsers, Web is not trying to imitate the browsing experiences of the 1990s. Web is how a browser should look if it is going to be build from nothing again.
+		Make <span class="tag">Web</span> your <span class="tag">Default Browser</span> app.
 	</p>
 	<p>&nbsp;</p>
 	
