--- a/testing/alerts.html
+++ b/testing/alerts.html
@@ -1,4 +1,7 @@
 <html>
+	<head>
+		<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport'>
+	</head>
 	<body>
 		<form>
 			<input type="button" value="alert" id="alert" />
